--- a/ing2.html
+++ b/ing2.html
@@ -61,12 +61,12 @@
                 <li class="nav-item active">
 
                 <div class="d-flex justify-content-center mt-5">
-                <a class="call_to-btn" href="index.html"><span>HOME</span></a>
+                <a style="margin-left: 5px;" class="call_to-btn" href="index.html"><span>HOME</span></a>
                 </li>
                 <li class="nav-item active">
 
                 <div class="d-flex justify-content-center mt-5">
-                <a class="call_to-btn" href="ing.php"><span>GERİ</span></a>
+                <a style="margin-left: 5px;" class="call_to-btn" href="ing.php"><span>GERİ</span></a>
                 </li>
                 
               </ul>
